Avoid rounding coords for hue and value on bilinear sampleData

BUG:290383